feat: Raji Added basic register backend and modified some styles

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.data.mongodb.uri = mongodb+srv://rajeshwariN:Rajesh16@cluster0.kbxeduq.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database = GET-Money
+spring.data.mongodb.collection = Users
