--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.uri = mongodb+srv://rajeshwariN:Rajesh16@cluster0.kbxeduq.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database = GET-Money
-spring.data.mongodb.collection = Users
+spring.data.mongodb.uri = mongodb+srv://chandu71202:Bk3u5x5PfhKCAJRf@userdetails.jdhz42q.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database = GET-Money-DB
+spring.data.mongodb.collection = userDetails
