--- a/backend/User/src/main/resources/application.properties
+++ b/backend/User/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.uri = mongodb+srv://chandu71202:Bk3u5x5PfhKCAJRf@userdetails.jdhz42q.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri = mongodb+srv://chandu71202:lMMguAhbs5Bhm0nz@get-money.zbitvxm.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database = GET-Money-DB
-spring.data.mongodb.collection = userDetails
+spring.data.mongodb.collection = GET-MONEY
