--- a/backend/User/src/main/resources/application.yml
+++ b/backend/User/src/main/resources/application.yml
@@ -3,3 +3,9 @@ server :
 spring :
   application :
     name : USER-SERVICE
+eureka: 
+    instance: 
+        hostname: eurekaclient 
+    client: 
+    serviceUrl: 
+    defaultZone: http://eureka-server:8761/eureka
