Feat/Fix: (Eswar) Dockerized whole backend succesfully

--- a/backend/Cloud-Config-Server/src/main/resources/application.yml
+++ b/backend/Cloud-Config-Server/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
         git:
           uri: https://github.com/Chandu71202/spring-boot-microservices
           clone-on-start: true
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka/
