--- a/backend/Account/src/main/resources/application.yml
+++ b/backend/Account/src/main/resources/application.yml
@@ -3,3 +3,8 @@ server :
 spring :
   application :
     name : ACCOUNT-SERVICE
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka/
