--- a/backend/Cloud-Gateway/src/main/resources/application.yml
+++ b/backend/Cloud-Gateway/src/main/resources/application.yml
@@ -20,6 +20,10 @@ spring:
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin, RETAIN_FIRST
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-server:8761/eureka/
 
 globalcors:
   add-to-simple-url-handler-mapping: true
