--- a/backend/Service-Registry/Dockerfile
+++ b/backend/Service-Registry/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:17
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} service-registry.jar
+ADD target/service-registry.jar .
 EXPOSE 8761
-ENTRYPOINT ["java","-jar","/service-registry.jar"]
+ENTRYPOINT ["java","-jar","service-registry.jar"]
