--- a/backend/User/Dockerfile
+++ b/backend/User/Dockerfile
@@ -1,5 +1,4 @@
 FROM openjdk:17
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} User-Service.jar
+ADD target/user-service.jar .
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","/User-Service.jar"]
+ENTRYPOINT ["java","-jar","user-service.jar"]
