--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,css}\""
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +52,7 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "axios": "^1.5.1",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "prettier": "^3.0.3"
   }
 }
